--- a/Cooleaf/Application Controllers/Interests/SingleInterestPage/NPInterestViewController.xib
+++ b/Cooleaf/Application Controllers/Interests/SingleInterestPage/NPInterestViewController.xib
@@ -43,15 +43,15 @@
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gew-vZ-Aqb">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="245"/>
                     <subviews>
-                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" fixedFrame="YES" image="CoverPhotoPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="Moc-IA-ZaT">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
-                        </imageView>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="#CUISINE #LIFESTYLE" translatesAutoresizingMaskIntoConstraints="NO" id="enc-mi-QM1" userLabel="Categories label">
-                            <rect key="frame" x="10" y="220" width="300" height="20"/>
+                        <textView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="#CUISINE #LIFESTYLE" translatesAutoresizingMaskIntoConstraints="NO" id="enc-mi-QM1" userLabel="Categories label">
+                            <rect key="frame" x="10" y="169" width="300" height="20"/>
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
+                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" fixedFrame="YES" image="CoverPhotoPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="Moc-IA-ZaT">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
+                        </imageView>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3au-Rt-fAT">
                             <rect key="frame" x="280" y="203" width="32" height="32"/>
                             <state key="normal" image="LeaveGroupButton">
