--- a/Cooleaf/Application Controllers/NPProfileViewController/NPProfileViewController.xib
+++ b/Cooleaf/Application Controllers/NPProfileViewController/NPProfileViewController.xib
@@ -83,6 +83,10 @@
                                         <action selector="pastEventsButton:" destination="-1" eventType="touchUpInside" id="Xbv-Ng-E5A"/>
                                     </connections>
                                 </button>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="WhiteArrowRight" translatesAutoresizingMaskIntoConstraints="NO" id="980-7W-EbM">
+                                    <rect key="frame" x="293" y="18" width="16" height="25"/>
+                                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </imageView>
                             </subviews>
                             <color key="backgroundColor" red="0.30588235289999999" green="0.80392156859999997" blue="0.76862745099999996" alpha="1" colorSpace="calibratedRGB"/>
                         </view>
@@ -104,6 +108,7 @@
     </objects>
     <resources>
         <image name="AvatarPlaceHolderMaleBig" width="110" height="110"/>
+        <image name="WhiteArrowRight" width="8" height="12"/>
         <image name="WhiteEvents" width="32" height="32"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
