--- a/Cooleaf/Application Controllers/NPEventViewController/NPDateCell.xib
+++ b/Cooleaf/Application Controllers/NPEventViewController/NPDateCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -41,6 +41,7 @@ Label</string>
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="addToCalendar" destination="4St-Lv-90p" id="V83-6N-weg"/>
                 <outlet property="dateTextView" destination="psL-UB-ESS" id="8BA-3Y-9TM"/>
             </connections>
         </tableViewCell>
