--- a/Cooleaf/Application Controllers/NPProfileViewController/NPProfileViewController.xib
+++ b/Cooleaf/Application Controllers/NPProfileViewController/NPProfileViewController.xib
@@ -20,6 +20,9 @@
                 <outlet property="scrollView" destination="Y7z-Ly-XFA" id="GA8-3h-Ikl"/>
                 <outlet property="tagLabel1" destination="a4Q-FP-0Lb" id="w42-Og-s5W"/>
                 <outlet property="tagLabel2" destination="3Fn-vk-pXz" id="HiX-ft-3rw"/>
+                <outlet property="tagLabel3" destination="Peb-RM-ZSq" id="xck-6F-PlY"/>
+                <outlet property="tagLabel4" destination="eNh-TD-gLC" id="eLR-Ya-bMB"/>
+                <outlet property="tagLabel5" destination="B2W-xz-jW5" id="3sU-R4-dux"/>
                 <outlet property="tagView1" destination="w3N-ju-CV2" id="sy7-LY-CM9"/>
                 <outlet property="tagView2" destination="JX1-Xs-49U" id="Xy0-J8-TyG"/>
                 <outlet property="view" destination="1" id="3"/>
@@ -62,7 +65,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="But-9o-aID">
-                            <rect key="frame" x="0.0" y="200" width="320" height="200"/>
+                            <rect key="frame" x="0.0" y="200" width="320" height="280"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="WhiteEvents" translatesAutoresizingMaskIntoConstraints="NO" id="qj4-rU-WxM">
                                     <rect key="frame" x="10" y="14" width="32" height="32"/>
@@ -93,8 +96,32 @@
                                         <action selector="pastEventsButton:" destination="-1" eventType="touchUpInside" id="Xbv-Ng-E5A"/>
                                     </connections>
                                 </button>
+                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JX1-Xs-49U">
+                                    <rect key="frame" x="0.0" y="120" width="320" height="60"/>
+                                    <subviews>
+                                        <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="editPencilBlue" translatesAutoresizingMaskIntoConstraints="NO" id="GL5-Fn-cMW">
+                                            <rect key="frame" x="288" y="20" width="20" height="20"/>
+                                            <color key="tintColor" red="0.30588235289999999" green="0.80392156859999997" blue="0.76862745099999996" alpha="1" colorSpace="calibratedRGB"/>
+                                        </imageView>
+                                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ydX-dJ-bIK">
+                                            <rect key="frame" x="0.0" y="20" width="320" height="20"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pBp-nO-kv9">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                                            <subviews>
+                                                <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="editPencilBlue" translatesAutoresizingMaskIntoConstraints="NO" id="2D6-BB-tPV">
+                                                    <rect key="frame" x="288" y="20" width="20" height="20"/>
+                                                    <color key="tintColor" red="0.30588235289999999" green="0.80392156859999997" blue="0.76862745099999996" alpha="1" colorSpace="calibratedRGB"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </view>
                                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="w3N-ju-CV2">
-                                    <rect key="frame" x="0.0" y="60" width="320" height="60"/>
+                                    <rect key="frame" x="0.0" y="60" width="320" height="220"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Department" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a4Q-FP-0Lb">
                                             <rect key="frame" x="4" y="4" width="200" height="16"/>
@@ -106,46 +133,32 @@
                                             <rect key="frame" x="288" y="20" width="20" height="20"/>
                                             <color key="tintColor" red="0.30588235289999999" green="0.80392156859999997" blue="0.76862745099999996" alpha="1" colorSpace="calibratedRGB"/>
                                         </imageView>
-                                    </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </view>
-                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JX1-Xs-49U">
-                                    <rect key="frame" x="0.0" y="120" width="320" height="60"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Fn-vk-pXz">
-                                            <rect key="frame" x="4" y="4" width="200" height="16"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="editPencilBlue" translatesAutoresizingMaskIntoConstraints="NO" id="GL5-Fn-cMW">
-                                            <rect key="frame" x="288" y="20" width="20" height="20"/>
-                                            <color key="tintColor" red="0.30588235289999999" green="0.80392156859999997" blue="0.76862745099999996" alpha="1" colorSpace="calibratedRGB"/>
-                                        </imageView>
-                                    </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </view>
-                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pBp-nO-kv9">
-                                    <rect key="frame" x="0.0" y="180" width="320" height="60"/>
-                                    <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tags3" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Peb-RM-ZSq">
-                                            <rect key="frame" x="4" y="4" width="200" height="16"/>
+                                            <rect key="frame" x="4" y="44" width="200" height="16"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="editPencilBlue" translatesAutoresizingMaskIntoConstraints="NO" id="2D6-BB-tPV">
-                                            <rect key="frame" x="288" y="20" width="20" height="20"/>
-                                            <color key="tintColor" red="0.30588235289999999" green="0.80392156859999997" blue="0.76862745099999996" alpha="1" colorSpace="calibratedRGB"/>
-                                        </imageView>
-                                    </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </view>
-                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ydX-dJ-bIK">
-                                    <rect key="frame" x="0.0" y="180" width="320" height="20"/>
-                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Fn-vk-pXz">
+                                            <rect key="frame" x="4" y="84" width="200" height="16"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="My Groups" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cGB-Pg-bU2">
-                                            <rect key="frame" x="4" y="4" width="67" height="16"/>
+                                            <rect key="frame" x="4" y="204" width="67" height="16"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tags5" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B2W-xz-jW5">
+                                            <rect key="frame" x="4" y="164" width="200" height="16"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tags4" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eNh-TD-gLC">
+                                            <rect key="frame" x="4" y="124" width="200" height="16"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
